// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`It sould be invalid if input is not Boolean value 1`] = `
<Valle(Input)
  isBoolean={true}
>
  <Input
    message="Hi is not a boolean value. Please check your value and try again."
    valid={false}
    validate={[Function]}
  >
    <div>
      <input
        onChange={[Function]}
      />
      <div>
        Hi is not a boolean value. Please check your value and try again.
      </div>
    </div>
  </Input>
</Valle(Input)>
`;

exports[`It sould be valid if input is Boolean value 1`] = `
<Valle(Input)
  isBoolean={true}
>
  <Input
    message=""
    valid={true}
    validate={[Function]}
  >
    <div>
      <input
        onChange={[Function]}
      />
      <div />
    </div>
  </Input>
</Valle(Input)>
`;
